fixed overflow on landing page

--- a/styles/home.css
+++ b/styles/home.css
@@ -490,10 +490,10 @@ body {
         padding: 1rem;
     }
 
-    .content-img {
+    /* .content-img {
         width: 90%;
         margin: 0 auto;
-    }
+    } */
 
     .img-2 {
         display: block;
